--- a/test/src/App.css
+++ b/test/src/App.css
@@ -1,3 +1,25 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  overflow: hidden;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  background-color: #282c34;
+  color: #fff;
+  border: 3px solid #61dafb;
+}
+
+#root {
+  border: 3px solid #61dafb;
+}
+
 .App {
   text-align: center;
 }
