--- a/test/src/components/Container.css
+++ b/test/src/components/Container.css
@@ -1,25 +1,52 @@
 /* src/components/Container.css */
 
 .Container {
-  width: 90vw;
-  height: 50vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  max-width: 1200px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   background-color: #fff;
-  padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
 }
 
+.content {
+  display: flex;
+  flex-direction: row;
+}
 
 h1 {
+  display: flex;
+  font-size: xx-large;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+hr {
+  border: 2px solid #000;
+  width: 80%;
+}
+
+h2 {
   margin: 1rem;
-  margin-bottom: 1.5rem;
   color: #099909;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-align: center;
   font-size: xx-large;
+  border: 1px solid #000;
+  border-radius: 10%;
+  background-color: whitesmoke;
+}
+
+ul {
+  list-style: none;
+  padding-left: 1rem;
+  color: slateblue;
+  font-size: larger;
+  font-weight: bold;
 }
 
 li {
@@ -29,13 +56,17 @@ li {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-style: oblique;;
   font-size: large;
+  font-weight: lighter;
   color: #a00000;
   margin: 1rem;
+  word-break: keep-all;
 }
 
   span {
-    margin: 7rem;
+    display: flex;
+    flex-direction: column;
     border: 5px solid #999;
-    width: auto;
-    height: auto;
+    width: min-content;
+    height: max-content;
+    margin: 10rem;
   }
